<resources>
    <string name="app_name">Minesweeper</string>
    <string name="restart">Restart</string>
    <string name="home">Home</string>
    <string name="try_mine">Try</string>
    <string name="flag_mine">Flag</string>
    <string name="mine_select_msg">select the number of mines</string>
    <string name="start">s t a r t</string>
    <string name="game_msg_flag">You flagged the wrong tile!</string>
    <string name="game_msg_mine">You hit a mine!</string>
    <string name="game_msg_win">Nice job, you win!</string>
    <string name="title_screen_img">Minesweeper logo</string>
    <string name="copyright_msg">© Tongyu Zhou</string>
</resources>
