<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp">

        <ToggleButton
                android:id="@+id/toggleBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/try_mine"
                android:textOn="@string/flag_mine"/>

    </LinearLayout>

    <us.ait.minesweeper.view.MinesweeperView
            android:id="@+id/minesweeperView"
            android:layout_width="300dp"
            android:layout_height="300dp"/>


    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="25dp">

        <Button
                android:id="@+id/restartBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restart"
                android:background="@android:color/black"
                android:textColor="@android:color/white"/>

    </LinearLayout>


    <Button
            android:id="@+id/homeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"/>


</LinearLayout>