<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        tools:context=".MinesweeperTitleScreen">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="25dp">

        <ImageView
                android:contentDescription="@string/title_screen_img"
                android:src="@drawable/nobomb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>



    <TextView
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_select_msg"/>


    <com.rey.material.widget.Slider
            android:id="@+id/mineSlider"
            app:sl_discreteMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:sl_secondaryColor="@color/cardview_dark_background"
            app:sl_travelAnimDuration="@android:integer/config_shortAnimTime"
            android:gravity="center"
            app:sl_minValue="1"
            app:sl_maxValue="20"
            app:sl_value="3"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="85dp">


        <Button
                android:textSize="30sp"
                android:id="@+id/startBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"/>

    </LinearLayout>

    <TextView
            android:gravity="center"
            android:text="@string/copyright_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>